ghc-4335c07/testsuite/tests/typecheck/should_run/T8119.hs
{-# LANGUAGE TypeFamilies #-}
class Test a where test :: a
instance (a ~ Int, b ~ Int) => Test (a -> b) where test = id
