ghc-4335c07/testsuite/tests/typecheck/should_fail/T12083b.hs
{-# LANGUAGE GADTs #-}

module T12083b where

class Class a where
    test :: a -> (Eq a => r) -> r

data P a b where
    Con :: (Class a, a ~ b) => P a b
